--- a/src/components/CreateAccountsHeroSection/herosection.styles.module.scss
+++ b/src/components/CreateAccountsHeroSection/herosection.styles.module.scss
@@ -12,7 +12,7 @@
 }
 .heroSectionWrapper{
     background-color: rgba(17, 17, 17, 0.6);
-    padding: 5rem 0.1px 12.37rem 0.1px;
+    padding: 5rem 0.1px 13.37rem 0.1px;
     margin-bottom: -9.51rem;
 }
 .triangleShape{
@@ -65,7 +65,10 @@
     }
     
 }
-@media (max-width: 350px) {
+@media (max-width: 345px) {
+    .heroSectionWrapper{
+        padding: 2.357rem 4% 7.473rem 4%;
+    }
     .title{
         font-size: 2.4rem;
     }
