--- a/src/ui/Input/Input.scss
+++ b/src/ui/Input/Input.scss
@@ -30,6 +30,9 @@
     &:focus{
       border-color: $primary;
     }
+    @media (max-width: 550px) {
+      padding: 1.22em 0.9em;
+    }
   }
 }
 .w-50 {
