--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -155,7 +155,7 @@
           flex-direction: column;
           width: 100%;
           background-color: $black2;
-          padding: 40px 42px;
+          padding: 15px 42px;
           border-radius: 9px;
           align-items: flex-start;
           height: 406px;
@@ -263,7 +263,7 @@
 
                 p {
                   font-size: 14px;
-                  width: 105px;
+                  width: 112px;
 
                   &.flex_0_85 {
                     flex: 0.85;
@@ -274,12 +274,121 @@
                   font-size: 14px;
                   font-weight: 600;
                   color: $primary;
+                  padding-left: 20px;
                 }
 
                 .scoring_row {
                   display: flex;
                   width: 100%;
                   text-align: left;
+                }
+              }
+            }
+
+            .container_tabs {
+              display: flex;
+              flex-direction: column;
+              margin: 0;
+              padding: 0;
+            
+              ul {
+                list-style: none;
+              }
+            
+              .tabs_header {
+                display: flex;
+                margin: 0;
+                padding: 0;
+                font-size: 16px;
+                border-bottom: 2px solid $grey;
+            
+                li {
+                padding: 10px 0;
+                margin: 0 78px -2px 0;
+                }
+            
+                li:hover {
+                cursor: pointer;
+                }
+            
+                li.active {
+                border-bottom: 2px solid $primary;
+                color: $primary;
+                font-weight: bold;
+                font-style: italic;
+                }
+            
+                span {
+                padding: 2px 8px;
+                margin: 0 5px;
+                border-radius: 50%;
+                background-color: $primary;
+                color: $white;
+                font-style: normal;
+                }
+              }
+            
+              .tab_body {
+                margin: 10px 0;
+
+                .__powers_available {
+                  display: flex;
+                  flex-direction: row;
+                  flex-wrap: wrap;
+                  transition: all ease-in-out var(--transition-speed);
+                  width: 100%;
+              
+                  svg {
+                    margin: 0;
+                    padding: 0;
+                  }
+              
+                  .body_card {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    width: 105px;
+                    opacity: 1;
+                    font-family: Teko;
+                    font-size: 15px;
+                    font-weight: 500;
+                    margin-right: 50px;
+                    span {
+                      display: flex;
+                      justify-content: center;
+                      background-color: $lightBlue4;
+                      min-width: 40px;
+                      height: 24px;
+                      line-height: 24px;
+                      font-size: 16px;
+                      font-weight: 600;
+                      border-radius: 10px;
+                      transform: translate(30px, 15px);
+                    }
+              
+                    p {
+                      margin: 4px 0 0 0;
+                      padding: 0;
+                    }
+                  }
+              
+                  button {
+                    display: flex;
+                    justify-content: center;
+                    padding: 0;
+                    margin: 10px auto;
+                    line-height: 10px;
+                    background-color: transparent;
+                    border: none;
+                    outline: none;
+                    color: $lightBlue;
+                    border-bottom: 1px solid $lightBlue;
+              
+                    &:hover {
+                      cursor: pointer;
+                    }
+                  }
                 }
               }
             }
@@ -296,7 +405,6 @@
             font-size: 16px;
             font-weight: 500;
             border-radius: 12px;
-            margin: 40px 0;
             border: none;
             outline: none;
 
@@ -707,7 +815,7 @@
 
                   p {
                     font-size: 14px;
-                    width: 105px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.85;
@@ -718,6 +826,7 @@
                     font-size: 14px;
                     font-weight: 600;
                     color: $primary;
+                    padding-left: 20px;
                   }
 
                   .scoring_row {
@@ -1277,7 +1386,7 @@
             flex-direction: column;
             width: 100%;
             background-color: $black2;
-            padding: 40px 42px;
+            padding: 15px 42px;
             border-radius: 9px;
             align-items: flex-start;
             height: 406px;
@@ -1385,7 +1494,7 @@
 
                   p {
                     font-size: 14px;
-                    width: 105px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.85;
@@ -1396,6 +1505,7 @@
                     font-size: 14px;
                     font-weight: 600;
                     color: $primary;
+                    padding-left: 20px;
                   }
 
                   .scoring_row {
@@ -1418,7 +1528,6 @@
               font-size: 16px;
               font-weight: 500;
               border-radius: 12px;
-              margin: 40px 0;
               border: none;
               outline: none;
 
@@ -1689,7 +1798,7 @@
 
                   p {
                     font-size: 12px;
-                    width: 100px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.8;
@@ -1699,6 +1808,7 @@
                   span {
                     font-size: 12px;
                     font-weight: 500;
+                    padding-left: 20px;
                   }
                 }
               }
@@ -1895,7 +2005,7 @@
 
                   p {
                     font-size: 12px;
-                    width: 100px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.8;
@@ -1905,6 +2015,7 @@
                   span {
                     font-size: 12px;
                     font-weight: 500;
+                    padding-left: 20px;
                   }
                 }
               }
@@ -2100,7 +2211,7 @@
 
                   p {
                     font-size: 12px;
-                    width: 100px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.8;
@@ -2110,6 +2221,7 @@
                   span {
                     font-size: 12px;
                     font-weight: 500;
+                    padding-left: 20px;
                   }
                 }
               }
@@ -2307,7 +2419,7 @@
 
                   p {
                     font-size: 12px;
-                    width: 100px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.8;
@@ -2317,6 +2429,7 @@
                   span {
                     font-size: 12px;
                     font-weight: 500;
+                    padding-left: 20px;
                   }
                 }
               }
@@ -2516,7 +2629,7 @@
 
                   p {
                     font-size: 12px;
-                    width: 100px;
+                    width: 112px;
 
                     &.flex_0_85 {
                       flex: 0.8;
@@ -2526,6 +2639,7 @@
                   span {
                     font-size: 12px;
                     font-weight: 500;
+                    padding-left: 20px;
                   }
                 }
               }
