design-the-verification-page

--- a/src/pages/GetUserInfoPage/styles.module.scss
+++ b/src/pages/GetUserInfoPage/styles.module.scss
@@ -6,6 +6,7 @@
     max-width: 70.8572rem;
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
 }
 
 .leftSection{
