--- a/src/components/PowerCollapesible/index.module.scss
+++ b/src/components/PowerCollapesible/index.module.scss
@@ -103,10 +103,10 @@
       span {
         display: flex;
         justify-content: center;
+        align-items: center;
         background-color: $lightBlue4;
         min-width: 40px;
         height: 24px;
-        line-height: 24px;
         font-size: 16px;
         font-weight: 600;
         border-radius: 10px;
