--- a/src/components/SportsSidebarContent/index.module.scss
+++ b/src/components/SportsSidebarContent/index.module.scss
@@ -6,6 +6,17 @@
   flex-direction: column;
   margin-top: 20px;
 
+  p {
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: $white;
+  }
+
   .sidebar_body_1 {
     background-color: $black2;
     padding: 15px 20px;
@@ -14,6 +25,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 290px;
 
     .sidebar_body_section {
       display: flex;
@@ -52,6 +64,15 @@
         text-transform: uppercase;
         color: $lightGrey4;
         width: 25px;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: 900;
+        font-stretch: normal;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: 1px;
+        color: $grey2;
 
         &.active {
           color: $primary;
@@ -126,6 +147,16 @@
 
 @media (max-width: 1326px) {
   .sidebar_body {
+    p {
+      font-family: Poppins;
+      font-size: 14px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      color: $white;
+    }
     .sidebar_body_1 {
       background-color: $black2;
       padding: 14px;
@@ -178,7 +209,14 @@
 @media (max-width: 1124px) {
   .sidebar_body {
     p {
-      font-size: 12px;
+      font-family: Poppins;
+      font-size: 14px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      color: $white;
     }
 
     .sidebar_body_1 {
