--- a/src/components/Content/index.module.scss
+++ b/src/components/Content/index.module.scss
@@ -1,7 +1,13 @@
-@import '../../scss/colors.scss';
-
 .root{
     margin: 4.2857rem 6.94%;
     display: flex;
     gap: 4.2857rem;
+    @media (max-width: 997px) {
+        gap: 1.8rem;
+        margin: 2rem;
+    }
+    @media (max-width: 770px) {
+        margin: 0;
+        background: #000000;
+    }
 }
