ZUM with fixer is implemented succesfully

--- a/src/components/DepositAmountPopUp/styles.module.scss
+++ b/src/components/DepositAmountPopUp/styles.module.scss
@@ -128,6 +128,11 @@ body {
 .creditdebitcardImg {
   width: 2.857rem;
 }
+// .visaCard {
+//   width: 16px;
+//   height: 20px;
+//   background-color: #293688;
+// }
 .PayPal,
 .ECheck,
 .cvvImage,
