MLb player selection dummy details

--- a/src/components/SportsSelectionCard3/index.module.scss
+++ b/src/components/SportsSelectionCard3/index.module.scss
@@ -165,6 +165,67 @@
     }
   }
 
+  .stats_detail_container {
+    display: flex;
+    width: 100%;
+    margin-top: 14px;
+
+    .stats_detail_left {
+      display: flex;
+      flex-direction: column;
+      margin-right: 10px;
+      margin-top: 28px;
+      font-family: Poppins;
+      font-size: 14px;
+      color: $grey2;
+
+      span {
+        margin: 3px 0;
+      }
+    }
+
+    .stats_detail_right {
+      display: flex;
+      flex-direction: column;
+      width: 67%;
+
+      .stats_detail_right_h {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        margin-bottom: 6px;
+        color: $grey2;
+        font-weight: normal;
+        font-family: Poppins;
+        font-size: 14px;
+
+        span {
+          flex: 1;
+          text-align: center;
+        }
+      }
+
+      .stats_detail_right_b {
+        display: flex;
+        flex-direction: column;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 14px;
+
+        .stats_detail_right_b_item {
+          display: flex;
+          width: 100%;
+          margin: 3px 0;
+
+          span {
+            flex: 1;
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+
   .card_state_main_container {
     display: flex;
     flex-direction: row;
@@ -368,7 +429,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
@@ -546,7 +607,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
@@ -714,7 +775,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
@@ -882,7 +943,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
@@ -1087,7 +1148,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
@@ -1263,7 +1324,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
@@ -1439,7 +1500,7 @@
       flex-direction: row;
       height: 6px;
       margin-bottom: 2px;
-  
+
       div {
         display: flex;
         flex: 1;
