--- a/src/pages/MyGameCenter/MyGameCenter.scss
+++ b/src/pages/MyGameCenter/MyGameCenter.scss
@@ -25,6 +25,11 @@
               }
       }
   }
+
+  .__balance {
+    position: relative;
+    margin-top: 60px;
+  }
 }
 
 @media (min-width: 900px) {
